--- a/SensorData/appsettings.json
+++ b/SensorData/appsettings.json
@@ -1,4 +1,8 @@
 ﻿{
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=Sensor;Integrated Security=True"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
